--- a/ch1/背包问题.tex
+++ b/ch1/背包问题.tex
@@ -1,1 +1,16 @@
 \subsection{背包问题}
+
+\subsubsection{最优装载问题}
+	【问题】给出 $n$ 个物体，第 $i$ 个物体的重量为 $w_i$。选择尽量多的物体，使得总重量不超过 $C$。
+
+	【算法】只需把所有问题按重量从小到大排序，然后从最轻的开始选，直到无法选择为止。
+
+\subsubsection{部分背包问题}
+	【问题】给出 $n$ 个物体，第 $i$ 个物体的重量为 $w_i$，价值为 $v_i$。选择尽量多的物体，使得总重量不超过 $C$。
+
+	【算法】把所有物体按照性价比（价值除以重量的值）排序，然后优先拿性价比高的，直到总重量正好为 $C$。实际上，按照这种取法，除了最后一个被拿的物体外，其他物体要么全部拿走，要么没拿。
+
+\subsubsection{乘船问题}
+	【问题】有 $n$ 个人，第 $i$ 个人重量为 $w_i$。每艘船最大载重量均为 $C$，且最多能乘两个人。请用最少的船装载所有人。
+
+	【算法】从最轻的人开始，每个人都找一个能和他同船，而且重量最重的人。重复这个过程，直到没有人可以找到伙伴为止（剩下的人就一人一条船了）。
