--- a/ch3/二分答案.tex
+++ b/ch3/二分答案.tex
@@ -1,1 +1,15 @@
 \subsection{二分答案}
+	%\emph{此处缺少实战经验！}
+	
+	许多问题不易直接求解，但我们可以用很短的时间来判断某个解是否可行，而且已知候选答案的范围 [min,max]。这时我们大可不必通过计算得到答案，只需在此范围内应用“二分”的过程，逐渐靠近答案！
+	
+	\emph{最大值最小化问题}（“使最大值最小”）等常用此做法。
+	
+	当然不是任何题目都适合使用“二分答案”。能够二分答案的题目有以下几个特点：
+	
+	\begin{itemize}
+		\item 候选答案必须是离散的，且答案在一个上下界确定的范围里。
+		\item 候选答案在区间 [min,max] 上是有序的。
+		\item 很容易去判断某个值是不是答案。
+	\end{itemize}
+	
