--- a/setup/format.tex
+++ b/setup/format.tex
@@ -104,7 +104,7 @@
 \makeatother
 
 
-\newcommand{\hpp}[1]{$<$#1$>$}
+\newcommand{\header}[1]{$<$#1$>$}
 \newcommand{\jkh}[1]{$<$#1$>$}
 \newcommand{\mod}{~\mathrm{mod}~}
 \newcommand{\lcm}{\mathrm{lcm}}
